# AVS_HW1

./: CMakeLists.txt  README.md  bus.cpp  bus.h  car.cpp  car.h  container.cpp  container.h  main.cpp  random.cpp  random.h  transport.cpp  transport.h  truck.cpp  truck.h
answers/: answer_01.txt  answer_02.txt  answer_03.txt  answer_05.txt
tests/: test_01.txt  test_03.txt  test_04.txt
